--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <body>
 <h1> Under construction</h1>
 <p>Here are my cats for now.</p>
-![Photo of Moomoo, our first cat](/lyndonji.github.io/docs/assets/images/Moomoo1.jpg)
+<img src="/lyndonji.github.io/docs/assets/images/Moomoo1.jpg" alt="Moomoo, our first cat" width="500" height="600">
 </body>
 </html>
