--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <body>
 <h1> Under construction</h1>
 <p>Here are my cats for now.</p>
-<img src="/lyndonji.github.io/docs/assets/images/Moomoo1.jpg" alt="Moomoo, our first cat" width="500" height="600">
+<img src="/lyndonji.github.io/docs/assets/images/Moomoo1.jpg" alt="Moomoo, our first cat" width="900" height="600">
+<img src="/lyndonji.github.io/docs/assets/images/Meatball1.jpg" alt="Meatball, our second cat (she is a tripod)" width="600" height="900">
 </body>
 </html>
